# xgsail

./: .env.example  .gitignore  B1_HARDWARE_SPEC_1.md  B1_JAUX_HEADER_SPEC.md  CLAUDE.md  Dockerfile  README.md  SF_FIRMWARE_V2_SPEC.md  SF_SHOPPING_LIST.md  docker-compose.yml  pyproject.toml
.github/workflows/: android-release.yml  (+3 more)
backend/: main.py  support.py
config/: sailframes.yaml
deploy/: Dockerfile.backend  README.md  config.docker.js  docker-compose.prod.yml  minio-init.sh  requirements.txt  wind-scheduler.sh
docs/: RTK_PHASE2_DESIGN.md  RTK_PLAN.md  S1_LEGACY.md  device-protocol.md  er-project.md  estimation-pipeline.md  native-apps.md  ota-updates.md
edge/: README.md
frontend/: .env.native.example  capacitor.config.ts  index.html  nginx.conf  package-lock.json  package.json
libs/xgsail_windfusion/: pyproject.toml
libs/xgsail_windfusion/xgsail_windfusion/: __init__.py  calibration.py
processing/: maneuvers.py
scripts/: backfill_session_visibility.py  build-images.sh  calibrate_wind_weights.py  correct_wind_awa.py  deploy-ota.sh  display-control-helper.sh  export_maneuver_training_data.py  flash-e1.sh  power-manager.py  process-gopro-sail.sh  recover_deleted_s3.py  restore_s1_session.py  restore_s1_sessions.py  rotate-gopro-180.sh  rtk_fix_summary.py  rtk_fixtime_logger.py  sailframes-wifi.service  scrape_orr_ez_polars.py  seed_cyc_wed_spring_2026.py  sync_session_data.py  upload-gopro-s3.sh  wifi-mode.sh
services/: sailframes_camera.py  sailframes_monitor.py
web/: battery.html  fleet.html  index.html  race.html  session.html
(+410 files in other folders)
